# apis-instance-cookiecutter

./: README.md  cookiecutter.json
.github/: dependabot.yml
{{ cookiecutter.project_slug }}/: pyproject.toml
