[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_name }}"
authors = [{ name = "{{ cookiecutter.author }}" }]
license = "MIT"
readme = "README.md"
requires-python = ">3.11"
packages = [{include = "apis_ontology"}]
dependencies = [
    "apis-core-rdf==0.54.3",
    "apis-acdhch-default-settings==2.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
